--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,13 +1,13 @@
 # your domain
-domain: example.com
-port:                 # default 12580
+domain: prxbilos.herokuapp.com
+port:    80             # default 12580
 
 # source list file
 source-files:
   # use local file
-  - ./config/source.yaml
+  #- ./config/source.yaml
   # use web file
-  # - https://example.com/config/source.yaml
+   - https://github.com/winkxx/proxypool/blob/master/config/source.yaml
 
 # ======= 可选项，留空使用default值  =======
 
@@ -15,11 +15,11 @@ source-files:
 database_url: ""
 
 # interval between each crawling
-crawl-interval:       # v0.5.x default 60 (minutes)
+crawl-interval: 720      # v0.5.x default 60 (minutes)
 crontime:             # v0.4.x default 60 (minutes). Deprecated in the newest version
 
 # speed test
-speedtest: false      # default false. Warning: this will consume large network resources.
+speedtest: true      # default false. Warning: this will consume large network resources.
 speedtest-interval:   # default 720 (min)
 connection:           # default 5. The number of speed test connections simultaneously
 timeout:              # default 10 (seconds).
